# axon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  README_dev.md  build_backend.py  build_docs.sh  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  security.yml
axon/: globals.py  protocol.py
axon/cli/: __init__.py  _commands.py  _hydra_bridge.py  _runs.py  train.py
axon/config/: __init__.py  config.yaml  validate_config.py
axon/controller/: __init__.py  decorator.py  worker_group.py
axon/core/: __init__.py  agent.py  class_init.py  env.py  resource_pool.py  role.py  worker.py
axon/data/: __init__.py  dataloader.py  dataset.py
axon/driver/: __init__.py  async_ppo.py  base.py  driver_utils.py  sync_ppo.py  train_agent_ppo.py
axon/engine/: __init__.py  engine.py
axon/models/: __init__.py  fsdp_models.py  megatron_models.py
axon/monkey_patches/: __init__.py
axon/programs/: __init__.py  base_program.py  proxy_program.py  react_program.py
axon/sampler/: __init__.py  sampler.py
axon/tinker/: __init__.py  sampling_client.py  training_client.py
axon/tools/: executors.py  tools.py  types.py
axon/trainer/: __init__.py  fsdp_trainer.py  megatron_trainer.py
axon/utils/: __init__.py  config.py  dataset_utils.py  flashinfer_compat.py  fs.py  hf_model.py  import_utils.py  llm_api.py  memory_utils.py  module_loader.py  networking_utils.py  openai_client.py  print_utils.py  process.py  py_utils.py  rag_utils.py  rocm_utils.py  scheduler_utils.py  seqlen_balancing.py  system_prompts.py  temperature_scheduler.py  tensordict_utils.py  tokenizer.py  tokenizer_pool.py  tracking.py  transformers_compat.py  ulysses.py  vision_utils.py
docs/: index.md
docs/core-concepts/: architecture.md  execution-modes.md  parallelism.md  programs-agents-and-tools.md  sampler-trainer-agreement.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: add-a-model.md  add-a-program.md  add-an-algorithm.md
docs/reference/: cli.md  configuration.md
install/: install.sh  postinstall_script.sh  preinstall_script.sh
install/deepep/: README.md  configure_system_drivers.sh  install_python_libraries.sh
install/deepgemm/: README.md  deepgemm.patch  install_deepgemm.sh
install/dependencies/: requirements-agents.txt  requirements-base.txt  requirements-dev.txt  requirements-docs.txt  requirements-mcore.txt  requirements-sglang.txt  requirements-vllm.txt
install/docker/: Dockerfile  Dockerfile.rocm_MI300
install/utils/: pip_helpers.sh  source_cuda_env.sh
install/vllm/: README.md  axon.patch  generate_patch.sh  install_vllm.sh
recipes/: README.md
recipes/2048/: README.md  agent.py  data.py  env.py  train_2048_qwen_30b_a3b.sh
recipes/code/: README.md  agent.py  data.py  env.py  train_deepcoder_fsdp.sh
recipes/conversion/: README.md  convert_hf_to_int4.py  convert_hf_to_mxfp8.py
tests/: README.md  conftest.py  test_protocol.py
(+456 files in other folders)
